# PigeonMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  manifest.json
.github/: CODEOWNERS
.github/workflows/: windows-build.yml
scripts/start/windows/: start.bat
src/: complete_integration.cpp  final_integration.hpp  fixes_and_integration.hpp  main.cpp  main_final.cpp  minecraft_server_complete.cpp
src/core/: buffer.hpp  config.hpp  core.cpp  logger.hpp  memory_pool.hpp  packet_types.hpp  performance_monitor.hpp  puffer.hpp  thread_pool.hpp  types.hpp  utils.hpp
src/entity/: entity.hpp
src/network/: chunk_packets.hpp  connection.hpp  packet_manager.cpp  packet_types.hpp  server.cpp  server.hpp
src/player/: player.hpp
src/server/: command_system.hpp  minecraft_server.hpp  server_impl.cpp
src/world/: block.hpp  chunk.hpp  world_persistence.hpp
test-plugin/: pom.xml
test-plugin/src/main/java/com/icelater/anticheat/checks/: CheckManager.java  CheckManagerUtils.java  FastBreakCheck.java  ReachCheck.java
test-plugin/src/main/java/com/icelater/anticheat/commands/: ACCommand.java
test-plugin/src/main/resources/: plugin.yml
tests/files/: CMakeLists.txt
tests/start/linux/: start.sh
tests/start/windows/: start.bat
